<resources>
    <string name="app_name">DymandWatchClient</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="startFgService">Start Foreground Service</string>
    <string name="simpleStart">Start</string>
    <string name="notification_title">DyMand Study</string>
    <string name="notification_message">Ongoing</string>
    <string name="ble_not_supported">Bluetooth not supported</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="startServiceCentral">Central</string>
    <string name="startServicePeripheral">Peripheral</string>
    <string name="start_setup">Start Setup</string>
    <string name="kill_service">Kill Service</string>
    <string name="title_activity_bluetooth_setup">Bluetooth Setup</string>
    <string name="black_string">BLACK</string>
    <string name="white_string">WHITE</string>
    <string name="color_question">"What is your device's color?"</string>
    <string name="title_activity_setup_uuid">SetupUUID</string>
    <string name="title_activity_start_study">StartStudy</string>
    <string name="subejct_id_info">Number should be same on both watches</string>
    <string name="title_activity_get_config">GetConfigActivity</string>
    <string name="get_config_info">Make sure phone\'s Bluetooth is on</string>
    <string name="title_activity_setup_complete">SetupCompleteActivity</string>
    <string name="setup_complete_msg">Setup Complete </string>
    <string name="title_activity_get_voice_sample">GetVoiceSampleActivity</string>
    <string name="voice_sample_msg">Read text and press START to record and STOP when done</string>
    <string name="start_msg">start</string>
    <string name="stop_msg">stop</string>
    <string name="title_activity_getting_configuration">GettingConfigurationActivity</string>
    <string name="Configuration_get_message">Please press the send button in the phone before pressing the receive button.</string>
    <string name="receive_button">Receive</string>
    <string name="title_activity_config_received">ConfigReceivedActivity</string>
    <string name="ConfigurationReceivedButton">Configuration successfully received. Press Weiter for next step.</string>
    <string name="nextGerman">Weiter</string>
</resources>
