<?xml version="1.0" encoding="utf-8"?>

<android.support.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context="ch.ethz.dymand.Setup.BlutoothSetupActivity"
    tools:deviceIds="wear">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/inner_frame_layout_padding"
        app:boxedEdges="all">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/select_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="killServiceOnClicked"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:text="@string/color_question" />

                <Button
                    android:id="@+id/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:onClick="startServiceOnClickedCentral"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_size"
                    android:text="@string/black_string" />

                <Button
                    android:id="@+id/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_size"
                    android:onClick="startServiceOnClickedPeripheral"
                    android:text="@string/white_string" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</android.support.wear.widget.BoxInsetLayout>

